--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,5 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "index.html?utm_source=homescreen"
+  "start_url": "vincentdm31.github.io/pwa"
 }
