--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,11 @@
   "theme_color": "#eb5252",
   "background_color": "#000000",
   "display": "fullscreen",
+  "scope": "/pwa/",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "cat-48.png",
+      "src": "cat.png",
       "type": "image/png",
       "sizes": "48x48"
     },
@@ -17,5 +18,5 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/"
+  "start_url": "vincentdm31.github.io/pwa"
 }
