--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "theme_color": "#eb5252",
   "background_color": "#000000",
   "display": "fullscreen",
-  "scope": "https://vincentdm31.github.io/pwa",
+  "scope": "/",
   "orientation": "portrait",
   "icons": [
     {
@@ -18,5 +18,5 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "https://vincentdm31.github.io/pwa"
+  "start_url": "https://vincentdm31.github.io/pwa/"
 }
