--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "theme_color": "#eb5252",
   "background_color": "#000000",
   "display": "fullscreen",
-  "scope": "/",
+  "scope": "/pwa/",
   "orientation": "portrait",
   "icons": [
     {
