--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "cat.png",
+      "src": "cat-48.png",
       "type": "image/png",
       "sizes": "48x48"
     },
